Fix issue with horizontal scroll bar appearing on mobile.

--- a/vite-project/src/habits/list/HabitList.css
+++ b/vite-project/src/habits/list/HabitList.css
@@ -6,4 +6,5 @@ li {
   list-style-type: none;
   display: inline-block;
   vertical-align: top;
+  width: 100%;
 }
