--- a/vite-project/src/habits/list/chart/HabitChart.css
+++ b/vite-project/src/habits/list/chart/HabitChart.css
@@ -1,4 +1,3 @@
 .chart {
-  width: auto;
   aspect-ratio: 16 / 9;
 }
